@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-13T08:09:35Z",
-  "count_outdated" : 62,
-  "uniques_outdated" : 51,
+  "timestamp" : "2022-09-14T00:32:19Z",
+  "count_outdated" : 69,
+  "uniques_outdated" : 57,
   "count" : 78,
   "uniques" : 65,
   "clones" : [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 6,
