@@ -1,12 +1,7 @@
 {
-  "count": 16,
-  "uniques": 9,
+  "count": 9,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 6,
