@@ -1,3 +1,11 @@
+2022-09-14T00:32:19Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049333495
+* notice: last 14d: unq all: 5 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 51 62 / 65 78
+* notice: next accum: outdated-unq outdated-all / unq all: 57 69 / 65 78
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-30] / []
+
 2022-09-13T08:09:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043387171
 * notice: last 14d: unq all: 9 16
